# VBot

./: .gitignore  cn.txt  main.py  pyproject.toml  tw.txt  words.txt
assets/: Assets.py  __init__.py
assets/detected_words/: cn.txt  image_urls.txt  tw.txt
assets/sayings/: sayings0.json  sayings1.json  sayings2.json
assets/words/: easy.txt  medium.txt
cogs/: Fun.py  OnlineJudge.py  Utils.py
cogs/cn_word_detector/: detector.py
cogs/cn_word_detector/assets/: cn.txt  image_urls.txt  tw.txt
cogs/keep_alive_tool/: Components.py  DomainManager.py  DomainStatusChecker.py  FileHandler.py
cogs/online_judge/: Problem.py
cogs/online_judge/formatter/: Formatter.py  Parser.py  RyanJudgeFormatter.py  ZeroJudgeFormatter.py  __init__.py
cogs/screenshot_generator/: Generator.py  style.css
markdown-parser/: package-lock.json  package.json  parser.js
utils/: Cog.py  Saying.py  __init__.py
