[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.5.0"
pillow = "^10.3.0"
requests = "^2.31.0"
html2image = "^2.0.4.3"
beautifulsoup4 = "^4.12.3"
ping3 = "^4.0.8"
python-dotenv = "^1.0.1"
tldextract = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
